--- a/.github/workflows/deploytocloudformation.yml
+++ b/.github/workflows/deploytocloudformation.yml
@@ -17,8 +17,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout code from master branch
+      - name: Checkout code from main branch
         uses: actions/checkout@v2
+
+      # Trouble Shooting Steps
+      - name: ls
+        run: ls -alR # list the whole filesystem to see what GHA sees
 
       # Configure AWS Credential
       - name: Configure AWS Credentials
