--- a/.github/workflows/deploy_new.yml
+++ b/.github/workflows/deploy_new.yml
@@ -22,17 +22,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: List directory contents
+        run: |
+          pwd
+          ls -la
+          ls -la euc-platform/cloudformation || echo "Cloudformation directory not found"
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: ${{ secrets.ACCESS_KEY }}
+          aws-region: ${{ secrets.ACCESS_KEY_SECRET }}
 
       - name: Deploy CloudFormation stack
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: vpc-backoffice-stack
-          template: euc-platform/cloudformation/vpc-eu-west-2-shared
+          template: euc-platform/cloudformation/vpc-eu-west-2-shared.yaml
           parameter-overrides: |
             ParameterKey1=ParameterValue1
             ParameterKey2=ParameterValue2
