--- a/.github/workflows/deploy_new.yml
+++ b/.github/workflows/deploy_new.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  AWS_REGION: eu-west-2  # London region code
+  AWS_REGION: eu-west-2
 
 jobs:
   deploy:
@@ -17,26 +17,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Debug Directory Structure
+        run: |
+          echo "Current working directory:"
+          pwd
+          echo "\nRepository contents:"
+          ls -R
+          echo "\nFull path search:"
+          find . -name "vpc-eu-west-2-shared.yaml"
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
-          aws-region: eu-west-2  # Explicitly set region here
-          
-      - name: Verify AWS Configuration
-        run: |
-          aws configure list
-          aws sts get-caller-identity
+          aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}   
+          aws-region: eu-west-2
 
       - name: Deploy CloudFormation stack
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: vpc-backoffice-stack
-          template: euc-platform/cloudformation/vpc-eu-west-2-shared.yaml
+          template: ./cloudformation/vpc-eu-west-2-shared.yaml  # Updated path
           parameter-overrides: |
             ParameterKey1=ParameterValue1
             ParameterKey2=ParameterValue2
           capabilities: CAPABILITY_IAM,CAPABILITY_NAMED_IAM
           no-fail-on-empty-changeset: "1"
-          region: eu-west-2  # Add explicit region here as well
+          region: eu-west-2
