--- a/.github/workflows/deploy_new.yml
+++ b/.github/workflows/deploy_new.yml
@@ -21,23 +21,21 @@ jobs:
         run: |
           echo "Current working directory:"
           pwd
-          echo "\nRepository contents:"
-          ls -R
-          echo "\nFull path search:"
-          find . -name "vpc-eu-west-2-shared.yaml"
+          echo "Contents of vpc-eu-west-2-shared directory:"
+          ls -la ./cloudformation/vpc-eu-west-2-shared/
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}   
+          aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
           aws-region: eu-west-2
 
       - name: Deploy CloudFormation stack
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: vpc-backoffice-stack
-          template: ./cloudformation/vpc-eu-west-2-shared.yaml  # Updated path
+          template: ./cloudformation/vpc-eu-west-2-shared/template.yaml  # Assuming template.yaml is the name
           parameter-overrides: |
             ParameterKey1=ParameterValue1
             ParameterKey2=ParameterValue2
