--- a/.github/workflows/deploy_new.yml
+++ b/.github/workflows/deploy_new.yml
@@ -21,8 +21,8 @@ jobs:
         run: |
           echo "Current working directory:"
           pwd
-          echo "Contents of vpc-eu-west-2-shared directory:"
-          ls -la ./cloudformation/vpc-eu-west-2-shared/
+          echo "Contents cloudformation directory:"
+          ls -la ./cloudformation/
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -35,7 +35,7 @@ jobs:
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: vpc-backoffice-stack
-          template: ./cloudformation/vpc-eu-west-2-shared/template.yaml  # Assuming template.yaml is the name
+          template: ./cloudformation/vpc-eu-west-2-shared
           parameter-overrides: |
             ParameterKey1=ParameterValue1
             ParameterKey2=ParameterValue2
