--- a/cloudformation/iam-awschronicle.yml
+++ b/cloudformation/iam-awschronicle.yml
@@ -19,6 +19,7 @@ Resources:
         - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
         - arn:aws:iam::aws:policy/AmazonSSMPatchAssociation
         - arn:aws:iam::aws:policy/ROSAKMSProviderPolicy
+        - !Ref PatchPolicyBaselineOverridesPolicy
 
   PatchPolicyBaselineOverridesPolicy:
     Type: AWS::IAM::ManagedPolicy
@@ -32,13 +33,6 @@ Resources:
               - s3:GetObject
             Resource:
               - arn:aws:s3:::aws-quicksetup-patchpolicy/*
-
-  AttachCustomPolicy:
-    Type: AWS::IAM::PolicyAttachment
-    Properties:
-      PolicyArn: !Ref PatchPolicyBaselineOverridesPolicy
-      Roles:
-        - !Ref AWSChronicleRole
 
 Outputs:
   RoleARN:
