--- a/cloudformation/iam-awschronicle.yml
+++ b/cloudformation/iam-awschronicle.yml
@@ -18,7 +18,7 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
         - arn:aws:iam::aws:policy/AmazonSSMPatchAssociation
-        - aarn:aws:iam::aws:policy/service-role/ROSAKMSProviderPolicy
+        - arn:aws:iam::aws:policy/service-role/ROSAKMSProviderPolicy
         - !Ref PatchPolicyBaselineOverridesPolicy
 
   PatchPolicyBaselineOverridesPolicy:
