--- a/.github/workflows/deploy-ad.yml
+++ b/.github/workflows/deploy-ad.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Deploy CloudFormation stack
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          name: ad-backoffice-stack
-          template: ./cloudformation/ad-eu-west-2-shared
+          name: dc-backoffice-stack
+          template: ./cloudformation/dc-eu-west-2-shared
           capabilities: CAPABILITY_IAM,CAPABILITY_NAMED_IAM
           no-fail-on-empty-changeset: "1"
           region: eu-west-2
