--- a/.github/workflows/deploy-backoffice-vpc.yml
+++ b/.github/workflows/deploy-backoffice-vpc.yml
@@ -31,10 +31,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
           aws-region: eu-west-2
 
-      - name: Deploy CloudFormation stack
+      - name: Deploy CloudFormation BAckoffice VPC
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          name: vpc-backoffice-stack
+          name: vpc-backoffice-vpc
           template: ./cloudformation/vpc-eu-west-2-shared
           capabilities: CAPABILITY_IAM,CAPABILITY_NAMED_IAM
           no-fail-on-empty-changeset: "1"
