--- a/.github/workflows/deploy-backoffice-vpc.yml
+++ b/.github/workflows/deploy-backoffice-vpc.yml
@@ -31,11 +31,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
           aws-region: eu-west-2
 
-      - name: Deploy CloudFormation BAckoffice VPC
+      - name: Deploy CloudFormation Backoffice VPC
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          name: vpc-backoffice-vpc
-          template: ./cloudformation/vpc-eu-west-2-shared
+          name: vpc-backoffice-london
+          template: ./cloudformation/vpc-eu-west-2-backoffice
           capabilities: CAPABILITY_IAM,CAPABILITY_NAMED_IAM
           no-fail-on-empty-changeset: "1"
           region: eu-west-2
