--- a/.github/workflows/deploy-backoffice dcs.yml
+++ b/.github/workflows/deploy-backoffice dcs.yml
@@ -1,4 +1,4 @@
-name: Deploy Dual Domain Controller Stack
+name: Deploy Backoffice DCs
 
 on:
   push:
@@ -31,11 +31,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
           aws-region: eu-west-2
 
-      - name: Deploy CloudFormation stack
+      - name: Deploy Backoffice DCs
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: dc-backoffice-stack
-          template: ./cloudformation/dc-eu-west-2-shared
+          template: ./cloudformation/dcs-eu-west-2-backoffice
           capabilities: CAPABILITY_IAM,CAPABILITY_NAMED_IAM
           no-fail-on-empty-changeset: "1"
           region: eu-west-2
