--- a/.github/workflows/deploy-user-transit-gw.yml
+++ b/.github/workflows/deploy-user-transit-gw.yml
@@ -1,1 +1,41 @@
+name: Deploy User for Transit Gateway
 
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
+
+env:
+  AWS_REGION: eu-west-2
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Debug Directory Structure
+        run: |
+          echo "Current working directory:"
+          pwd
+          echo "Contents cloudformation directory:"
+          ls -la ./cloudformation/
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
+          aws-region: eu-west-2
+
+      - name: Deploy User from TRansit Gateway
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: vpc-User-Transit-gateway
+          template: ./cloudformation/user-transitgateway-role.yml
+          capabilities: CAPABILITY_IAM,CAPABILITY_NAMED_IAM
+          no-fail-on-empty-changeset: "1"
+          region: eu-west-2
