--- a/.github/workflows/deploy-user-github.yml
+++ b/.github/workflows/deploy-user-github.yml
@@ -1,4 +1,4 @@
-name: Deploy User for Transit Gateway
+name: Deploy User for Gibhub Access
 
 on:
   push:
@@ -31,11 +31,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
           aws-region: eu-west-2
 
-      - name: Deploy User from TRansit Gateway
+      - name: Deploy User from Github access
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: vpc-User-Transit-gateway
-          template: ./cloudformation/user-transitgateway-role.yml
+          template: ./cloudformation/github-action-user
           capabilities: CAPABILITY_IAM,CAPABILITY_NAMED_IAM
           no-fail-on-empty-changeset: "1"
           region: eu-west-2
